# tutoring-app

./: .env  .env.example  README.md  compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: init.sql  insert.sql
